--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body
 {
   color: white;
-  background: #c0d3ff;
+  background: #05ce48;
 }
 span
 {
@@ -34,8 +34,8 @@ span
 label
 {
   font-size: 14px;
-  color: #62b33a;
+  color: white;
   padding: 6px;
   border-radius: 10px;
-  background-color: white;
+  background-color: black;
 }
